# CPP_course

./: README.md
AbstractFactory/: CMakeLists.txt  README.md  task12_1.cpp  task12_2.cpp
Builder/: CMakeLists.txt  main.cpp
CSVparser/: CMakeLists.txt  README.md  main.cpp  test002.txt
CircularBuffer/: CMakeLists.txt  README.md  main.cpp
CircularBuffer/CircularBuffer/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp
CircularBuffer/test/: CMakeLists.txt  test.cpp
Client/: main.cpp
Creatures/: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp
Factory/: CMakeLists.txt  README.md  creatures.txt  task11_1.cpp  task11_2.cpp
GameOfLife/: CMakeLists.txt  main.cpp  res.txt  test.txt
GameOfLife/MainClasses/: CMakeLists.txt  game.cpp  game.hpp
GameOfLife/examples/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt
GameOfLife/lib/: CMakeLists.txt  args_help.txt  help.txt
GameOfLife/lib/include/: game_interface.hpp  game_objects.hpp
GameOfLife/lib/source/: game_interface.cpp  (+1 more)
GameOfLife/test/: CMakeLists.txt  test.cpp
Time/: CMakeLists.txt  README.md  main.cpp
Time/test/: CMakeLists.txt  test.cpp
Time/time/: CMakeLists.txt  simple_watch.cpp  time.cpp  time.hpp  watch.cpp
Time4/: CMakeLists.txt  README.md  main.cpp
Time4/time/: CMakeLists.txt  time.cpp
TimeMove/: main.cpp
TimeMove/time/: time.cpp  time.hpp
Watches/: CMakeLists.txt  README.md  main.cpp
Watches/time/: time.cpp  time.hpp
Watches/watches/: CMakeLists.txt  watches.cpp  watches.hpp
